--- a/Resnet_testing.ipynb
+++ b/Resnet_testing.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Resnet_testing.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,20 +16,30 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Sachinyadav55/ddl-project-1/blob/master/Resnet_testing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "317jSMiL4I-0",
         "colab_type": "code",
+        "outputId": "0328e7e1-51b8-44a6-8fc0-e1d573cb672c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 134
-        },
-        "outputId": "0328e7e1-51b8-44a6-8fc0-e1d573cb672c"
+        }
       },
       "source": [
         "!git clone https://github.com/Sachinyadav55/3D-ResNets-PyTorch.git"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -50,16 +61,16 @@
       "metadata": {
         "id": "ISiLwhNJ4di1",
         "colab_type": "code",
+        "outputId": "e3364a19-df1d-492e-8f39-77735b274939",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e3364a19-df1d-492e-8f39-77735b274939"
+        }
       },
       "source": [
         "!ls"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,17 +86,17 @@
       "metadata": {
         "id": "smCmZFkM4fAT",
         "colab_type": "code",
+        "outputId": "7571d0b2-0283-418b-bdda-b01fc1a23e39",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
-        },
-        "outputId": "7571d0b2-0283-418b-bdda-b01fc1a23e39"
+        }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,16 +116,16 @@
       "metadata": {
         "id": "M3GqODRx5avT",
         "colab_type": "code",
+        "outputId": "5311cadd-edc3-49bc-908d-38833f8b40af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5311cadd-edc3-49bc-908d-38833f8b40af"
+        }
       },
       "source": [
         "ls"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,18 +141,18 @@
       "metadata": {
         "id": "C4_zjzLn6dsJ",
         "colab_type": "code",
+        "outputId": "a27db9de-cf5b-4ec6-c486-ed2695502e8c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "a27db9de-cf5b-4ec6-c486-ed2695502e8c"
+        }
       },
       "source": [
         "!wget -c https://repo.continuum.io/archive/Anaconda3-5.1.0-Linux-x86_64.sh\n",
         "!chmod +x Anaconda3-5.1.0-Linux-x86_64.sh\n",
         "!bash ./Anaconda3-5.1.0-Linux-x86_64.sh -b -f -p /usr/local"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,16 +468,16 @@
       "metadata": {
         "id": "2AGSqDBA_q_p",
         "colab_type": "code",
+        "outputId": "fea5ed36-c5aa-4633-86dd-382be4adce72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "fea5ed36-c5aa-4633-86dd-382be4adce72"
+        }
       },
       "source": [
         "!conda install pytorch torchvision cuda80 -c soumith"
       ],
-      "execution_count": 57,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,16 +625,16 @@
       "metadata": {
         "id": "QK-x-LL__x-a",
         "colab_type": "code",
+        "outputId": "e873cd46-06ba-4b7e-e639-b22df05d7f3c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e873cd46-06ba-4b7e-e639-b22df05d7f3c"
+        }
       },
       "source": [
         "!uname -a"
       ],
-      "execution_count": 63,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,17 +650,17 @@
       "metadata": {
         "id": "fg3vwQvVBLRM",
         "colab_type": "code",
+        "outputId": "3e0412e5-33df-4a18-da6f-78ab433babae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 790
-        },
-        "outputId": "3e0412e5-33df-4a18-da6f-78ab433babae"
+        }
       },
       "source": [
         "!wget https://www.johnvansickle.com/ffmpeg/old-releases/ffmpeg-3.3.4-64bit-static.tar.xz\n",
         "!tar xvf ffmpeg-3.3.4-64bit-static.tar.xz"
       ],
-      "execution_count": 65,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,16 +721,16 @@
       "metadata": {
         "id": "xRwJ1EkeBaev",
         "colab_type": "code",
+        "outputId": "4e9bb35b-e601-4132-ed63-471a34f602b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "4e9bb35b-e601-4132-ed63-471a34f602b1"
+        }
       },
       "source": [
         "!ls"
       ],
-      "execution_count": 67,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -737,16 +748,16 @@
       "metadata": {
         "id": "Qb9Kbi6IGhVI",
         "colab_type": "code",
+        "outputId": "b70f65db-7f2f-4bfc-e80d-46bd67961ce6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b70f65db-7f2f-4bfc-e80d-46bd67961ce6"
+        }
       },
       "source": [
         "cd ffmpeg-3.3.4-64bit-static/"
       ],
-      "execution_count": 70,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -788,16 +799,16 @@
       "metadata": {
         "id": "L_CcN_SYOckP",
         "colab_type": "code",
+        "outputId": "7281cb30-53f5-4465-ec45-d24c5bfc3d36",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
-        },
-        "outputId": "7281cb30-53f5-4465-ec45-d24c5bfc3d36"
+        }
       },
       "source": [
         "ls"
       ],
-      "execution_count": 124,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -814,12 +825,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JrkRgbXdO8QV",
+        "id": "JbDn1pQDlhBx",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "python main.py --root_path ~/data --video_path kinetics_videos/jpg --annotation_path kinetics.json \\\n",
+        "--result_path results --dataset kinetics --resume_path results/save_100.pth \\\n",
+        "--model_depth 34 --n_classes 400 --batch_size 128 --n_threads 4 --checkpoint 5"
       ],
       "execution_count": 0,
       "outputs": []
